<resources>
    <string name="app_name">zaico codingtest</string>
    <string name="inventories_label">在庫一覧</string>
    <string name="inventory_detail_label">在庫詳細</string>
    <string name="error_load_inventories">在庫一覧を取得できませんでした: %1$s</string>
    <string name="error_load_inventory">在庫詳細を取得できませんでした: %1$s</string>
    <string name="error_response_not_json">レスポンスを JSON として解釈できませんでした</string>
    <string name="error_response_missing_data">レスポンスに data が含まれていません</string>
    <string name="error_not_object">%1$sがオブジェクトではありません</string>
    <string name="error_not_array">%1$sが配列ではありません</string>
    <string name="error_missing_field">%1$sが含まれていません</string>
    <string name="error_not_integer">%1$sが整数ではありません</string>
    <string name="error_out_of_range">%1$sが扱える範囲を超えています</string>
    <string name="error_no_company">利用可能な会社が見つかりませんでした</string>
    <string name="json_part_response">レスポンス</string>
    <!-- JSON のキー名そのものなので訳さない。 -->
    <string name="json_part_data" translatable="false">data</string>
    <string name="json_part_inventory">在庫</string>
    <string name="json_part_company">会社</string>
    <string name="error_api_token_missing">API トークンが設定されていません。local.properties に zaico.apiToken を設定してください。</string>
    <string name="create_inventory_label">在庫データ作成</string>
    <string name="create_inventory_title_hint">タイトル</string>
    <string name="create_inventory_save">登録</string>
    <string name="error_title_required">タイトルを入力してください</string>
    <string name="error_create_inventory">在庫データを作成できませんでした: %1$s</string>
    <string name="message_create_inventory_success">在庫データを作成しました</string>
    <string name="fab_create_inventory_description">在庫データを作成する</string>
    <string name="inventory_detail_id">ID</string>
    <string name="inventory_detail_image">在庫画像</string>
    <string name="inventory_image_none">画像なし</string>
    <string name="inventory_image_description">%1$sの画像</string>
    <string name="inventory_image_close">画像を閉じる</string>
    <string name="inventory_image_description_untitled">在庫画像</string>
    <string name="inventory_detail_title">タイトル</string>
    <string name="inventory_detail_quantity">数量</string>
    <string name="inventories_empty">在庫データがありません</string>
    <string name="inventories_skipped">%1$d 件の在庫データを読み取れませんでした</string>
</resources>
